--- a/england/R/evaluate.Rmd
+++ b/england/R/evaluate.Rmd
@@ -45,7 +45,7 @@ source("backtransform.R")
 # *  the suffix `.tf` means "transformed" and `.btf` means "back-transformed"
 
 # When you're happy with the document, run the following command in the command line: 
-#  rmarkdown::render(input = "../R/evaluate.Rmd", output_file = paste0("../outputs/eval_", parameters$area_abbr, "_", parameters$rundate))
+#  rmarkdown::render(input = "../england/R/evaluate.Rmd", output_file = paste0("../england/outputs/eval_", parameters$area_abbr, "_", parameters$rundate))
 ```
 
 
@@ -131,11 +131,11 @@ run_tag <- data.frame(area_abbr = rep(parameters$area_abbr, nrow(sp_depth)), run
 dat_sp <- cbind(sp_depth, 
                 parameters$area_abbr, parameters$rundate)
 names(dat_sp) <- c(names(sp_depth), "area_abbr", "rundate")
-dat_sp$id <- seq(1,nrow(sp_depth))
+dat_sp$id <- seq(1,nrow(sp_depth)) #add an index
 
 #subset the data for testing 
 if(parameters$subset){
-subset.index <- sample(1:nrow(dat_sp), size = 10000, replace = FALSE)
+subset.index <- sort(sample(1:nrow(dat_sp), size = 10000, replace = FALSE))
 dat_sp <- dat_sp[subset.index,]
 }
 # summarise data and covariate space
@@ -181,6 +181,7 @@ This analysis uses the `gstat` function `krige.cv()` to perform ten-fold cross v
 ```{r}
 # run cross validation 
 if (parameters$parallel) { # cross validation on multiple cores
+  print(paste("cross validation using", length(cl), "clusters"))
   data <- dat_sp
   nfold <- 1:10
   fold <- sample(nfold, nrow(data), replace = TRUE)
@@ -193,30 +194,34 @@ if (parameters$parallel) { # cross validation on multiple cores
   } 
   sm.cv.sp$residual <- sm.cv.sp$cbrt_depth - sm.cv.sp$var1.pred 
   sm.cv.sp$zscore <- sm.cv.sp$residual/sqrt(sm.cv.sp$var1.var)
-  sm.cv.sp <- sm.cv.sp[,c("var1.pred", "var1.var", "cbrt_depth", "residual", "zscore", "fold")]
+  sm.cv.sp <- sm.cv.sp[,c("id", "var1.pred", "var1.var", "cbrt_depth", "residual", "zscore", "fold")]
 } else { # standard cross validation
   sm.cv.sp <- krige.cv(formula = cbrt_depth ~ elev + slope, 
                        locations = dat_sp,
                        model = model.geo, 
                        nfold=10, verbose = FALSE)
+  sm.cv.sp@proj4string <- dat_sp@proj4string
+  sm.cv.sp <- cbind(sm.cv.sp, dat_sp)
+  sm.cv.sp <- sm.cv.sp[,c("id", "var1.pred", "var1.var", "cbrt_depth", "residual", "zscore", "fold")]
 }
 
-names(sm.cv.sp) <- c("pred.tf", "var", "obs.tf", "resid.tf", "zscore", "fold")
+names(sm.cv.sp) <- c("id", "pred.tf", "var", "obs.tf", "resid.tf", "zscore", "fold")
 
 #backtransform
+sm.cv.sp$obs.btf <- btf(sm.cv.sp$obs.tf)
 sm.cv.sp$pred.btf <- btf(sm.cv.sp$pred.tf)
 sm.cv.sp$resid.btf <- sm.cv.sp$pred.btf - dat_sp$depth
 
 #add run data
 sm.cv <- sm.cv.sp@data  %>% 
   mutate( 
-    id = seq(1,nrow(dat_sp)),
     LPI = pred.tf - 1.96 * sqrt(var),
     UPI = pred.tf + 1.96 * sqrt(var),
     obsInInt = obs.tf < UPI & obs.tf > LPI) %>% 
   #select(pred.tf, var, obs.tf, LPI, UPI, obsInInt) %>%
   bind_cols(run_tag[subset.index,]) %>% 
-  mutate(modeltype = "sm")  
+  mutate(modeltype = "sm")  %>% 
+  arrange(id)
 ```
 
 
@@ -247,15 +252,18 @@ cat(sep = "", "Spatial model cross-validation metrics (back-transformed, ", para
 # MSPE, ideally small
 ", MSPE = ", mean(sm.cv$resid.btf^2) %>% round(3),
 # correlation observed and predicted, ideally 1
-", \ncor obs&pred = ", cor(sp_depth[subset.index,]$depth, sm.cv$pred.btf) %>% round(3),
+", \ncor obs&pred = ", cor(sm.cv$obs.btf, sm.cv$pred.btf) %>% round(3),
 # correlation predicted and residual, ideally 0
 ", cor pred&resid = ", cor(sm.cv$pred.btf, sm.cv$resid.btf) %>% round(3),
 # RSquared
-", R2 = ", rsq(observed = sp_depth[subset.index,]$depth, predicted = sm.cv$pred.btf) %>% round(3),
+", R2 = ", rsq(observed = sm.cv$obs.btf, predicted = sm.cv$pred.btf) %>% round(3),
 # Adjusted RSquared
-", R2 adj = ", rsq.adj(observed = sp_depth[subset.index,]$depth, predicted = sm.cv$pred.btf, n.predictors = 3, df.int = 1) %>% round(3)
+", R2 adj = ", rsq.adj(observed = sm.cv$obs.btf, predicted = sm.cv$pred.btf, n.predictors = 3, df.int = 1) %>% round(3)
 )
+
+
 ```
+
 ```{r}
 bubble(sm.cv.sp, "resid.btf", main = "10-fold CV residuals: spatial model")
 ```
@@ -267,24 +275,30 @@ bubble(sm.cv.sp, "resid.btf", main = "10-fold CV residuals: spatial model")
 ```{r}
 #linear model cv
 lm.cv.sp <- krige.cv(formula = cbrt_depth ~ elev + slope, 
-                       locations = dat_sp[subset.index,], model = NULL, 
-                       nfold=10, verbose = FALSE)
-names(lm.cv.sp) <- c("pred.tf", "var", "obs.tf", "resid.tf", "zscore", "fold")
+                     locations = dat_sp, model = NULL, 
+                     nfold=10, verbose = FALSE)
+lm.cv.sp@proj4string <- dat_sp@proj4string
+lm.cv.sp <- cbind(lm.cv.sp, dat_sp)
+lm.cv.sp <- lm.cv.sp[,c("id", "var1.pred", "var1.var", "cbrt_depth", "residual", "zscore", "fold")]
+
+
+names(lm.cv.sp) <- c("id", "pred.tf", "var", "obs.tf", "resid.tf", "zscore", "fold")
 
 #backtransform
+lm.cv.sp$obs.btf <- btf(lm.cv.sp$obs.tf)
 lm.cv.sp$pred.btf <- btf(lm.cv.sp$pred.tf)
-lm.cv.sp$resid.btf <- lm.cv.sp$pred.btf - dat_sp[subset.index,]$depth
+lm.cv.sp$resid.btf <- lm.cv.sp$pred.btf - dat_sp$depth
 
 #add run data
 lm.cv <- lm.cv.sp@data  %>% 
   mutate( 
-    id = seq(1,nrow(sp_depth[subset.index,])),
     LPI = pred.tf - 1.96 * sqrt(var),
     UPI = pred.tf + 1.96 * sqrt(var),
     obsInInt = obs.tf < UPI & obs.tf > LPI) %>% 
   #select(pred.tf, var, obs.tf, LPI, UPI, obsInInt) %>%
   bind_cols(run_tag[subset.index,]) %>% 
-  mutate(modeltype = "lm") 
+  mutate(modeltype = "lm")  %>% 
+  arrange(id)
 ```
 
 
@@ -314,13 +328,13 @@ cat(sep = "", "Linear model cross-validation metrics (back-transformed, ", param
 # MSPE, ideally small
 ", MSPE = ", mean(lm.cv$resid.btf^2) %>% round(3),
 # correlation observed and predicted, ideally 1
-", \ncor obs&pred = ", cor(sp_depth[subset.index,]$depth, lm.cv$pred.btf) %>% round(3),
+", \ncor obs&pred = ", cor(lm.cv.sp$obs.btf, lm.cv$pred.btf) %>% round(3),
 # correlation predicted and residual, ideally 0
 ", cor pred&resid = ", cor(lm.cv$pred.btf, lm.cv$resid.btf) %>% round(3),
 # RSquared
-", R2 = ", rsq(observed = sp_depth[subset.index,]$depth, predicted = lm.cv$pred.btf) %>% round(3),
+", R2 = ", rsq(observed = lm.cv.sp$obs.btf, predicted = lm.cv$pred.btf) %>% round(3),
 # Adjusted RSquared
-", R2 adj = ", rsq.adj(observed = sp_depth[subset.index,]$depth, predicted = lm.cv$pred.btf, n.predictors = 3, df.int = 1) %>% round(3)
+", R2 adj = ", rsq.adj(observed = lm.cv.sp$obs.btf, predicted = lm.cv$pred.btf, n.predictors = 3, df.int = 1) %>% round(3)
 )
 ```
 
@@ -334,12 +348,12 @@ Linear regression with no spatial component
 
 ```{r}
 #null model lm
-lm.null <- lm(depth ~ elev + slope, dat_sp[subset.index,])
+lm.null <- lm(depth ~ elev + slope, dat_sp)
 summary(lm.null)
 
   #save predictions
 nullmodel <- data.frame(pred.btf = lm.null$fitted.values, modeltype = as.factor("null"), 
-                        id = seq(1,nrow(dat_sp[subset.index,])),
+                        id = dat_sp$id,
                         area_abbr = parameters$area_abbr, rundate = parameters$rundate)
 
 cat(sep = "", "Linear null-model metrics (", parameters$area_abbr, "_", parameters$rundate,
@@ -357,18 +371,21 @@ cat("\n\nModel equation\n", model_equation(model = lm.null))
 # Parry 1
 #  lpdepth=Exp(0.875+0.00758*"dtm_metres"-0.0903*"slope_england")-25+(0.5*Exp(0.875+0.00758*"dtm_metres"-0.0903*"slope_england"))
 
-pred.parry <- exp(0.875 + 0.00758 * dat_sp[subset.index,]$elev - 0.0903 * dat_sp[subset.index,]$slope) - 25 + (0.5 * exp(0.875 + 0.00758 * dat_sp[subset.index,]$elev - 0.0903 * dat_sp[subset.index,]$slope))
+pred.parry <- exp(0.875 + 0.00758 * dat_sp$elev - 0.0903 * dat_sp$slope) - 25 + (0.5 * exp(0.875 + 0.00758 * dat_sp$elev - 0.0903 * dat_sp$slope))
 
-pred.parry <- data.frame(pred.btf = pred.parry, resid.btf = pred.parry - dat_sp[subset.index,]$depth, 
-                         modeltype = as.factor("parry"), id = seq(1,nrow(dat_sp[subset.index,])), 
-                         area_abbr = parameters$area_abbr, rundate = parameters$rundate) 
+pred.parry <- data.frame(pred.btf = pred.parry, 
+                         resid.btf = pred.parry - dat_sp$depth, 
+                         modeltype = as.factor("parry"), 
+                         id = dat_sp$id, 
+                         area_abbr = parameters$area_abbr, 
+                         rundate = parameters$rundate) 
 
 cat(sep = "", "Exponential model by Parry, metrics (", parameters$area_abbr, "_", parameters$rundate,
 # mean error, ideally 0:
-"):\nR2 = ", rsq(observed = dat_sp[subset.index,]$depth, predicted = pred.parry$pred.btf) %>% round(3),
-      ", R2 adj = ", rsq.adj(observed = dat_sp[subset.index,]$depth, predicted = pred.parry$pred.btf,
+"):\nR2 = ", rsq(observed = dat_sp$depth, predicted = pred.parry$pred.btf) %>% round(3),
+      ", R2 adj = ", rsq.adj(observed = dat_sp$depth, predicted = pred.parry$pred.btf,
                              n.predictors = 2, df.int = 1) %>% round(3),
-      ", RMSE = ", rmse(observed = dat_sp[subset.index,]$depth, predicted = pred.parry$pred.btf) %>% round(3), " cm")
+      ", RMSE = ", rmse(observed = dat_sp$depth, predicted = pred.parry$pred.btf) %>% round(3), " cm")
 
 cat("\n\nModel equation\nexp(0.875 + 0.00758 * elev - 0.0903 * slope) - 25 + (0.5 * exp(0.875 + 0.00758 * elev - 0.0903 * slope))")
 ```
@@ -376,11 +393,10 @@ cat("\n\nModel equation\nexp(0.875 + 0.00758 * elev - 0.0903 * slope) - 25 + (0.
 ```{r}
 #merge cv datasets and backtransform
 results.cv <- bind_rows(sm.cv, lm.cv, nullmodel, pred.parry) %>% 
-  full_join(dat_sp@data[subset.index,], by = c("id", "area_abbr", "rundate")) %>% 
+  full_join(dat_sp@data, by = c("id", "area_abbr", "rundate")) %>% 
   mutate_if(is.character, as.factor) %>% 
   dplyr::select(id, area_abbr, rundate, depth:cbrt_depth, everything())
-# summary(results.cv)
-# table(results.cv$modeltype)
+ summary(results.cv)
 ```
 ### Results summary  
 
@@ -400,6 +416,8 @@ table.metrics <- results.cv %>%
   mutate(modeltype = fct_relevel(modeltype, c("sm", "lm", "null", "parry"))) %>%
   arrange(modeltype) %>% 
   mutate_at(vars(rmse, cc, coverage, bias, interv), funs(round, .args = list("digits" = 2))) %>% 
+  mutate(summarytext = paste0(modeltype, ": RMSE = ", round(rmse, 2), 
+                       "cm, cc = ", round(cc, 2))) %>% 
   ungroup()
   
 
@@ -413,18 +431,17 @@ flextable(table.metrics %>% dplyr::select(modeltype:interv)) %>%
                  
 
 
-```{r message=FALSE, warning=FALSE, fig.align="left"}
+```{r fig.align="left", fig.width=10, message=FALSE, warning=FALSE}
 #graph predicted v observed values
+model.labels <- table.metrics$summarytext
+names(model.labels) <- table.metrics$modeltype
+
 ggplot(results.cv, aes(x = depth, y = pred.btf)) +
-  geom_point(aes(colour = modeltype, shape = modeltype), position = position_dodge(width = 2))+
+  geom_point(aes(colour = modeltype, shape = modeltype), position = position_dodge(width = 2), size = 0.5, alpha = 0.3)+
   geom_abline(slope = 1) +
-  coord_equal() +
-  geom_text(data = table.metrics %>% arrange(cc), 
-            aes(x = 0, y = seq(max(results.cv$pred.btf), by = 50, length.out = length(unique(modeltype))), 
-                colour = modeltype,
-                label = paste0(modeltype, ": RMSE =", round(rmse, 2),
-                              "cm, cc = ", round(cc, 2))),
-            size = 3, show.legend = F, hjust = "left") +
+  coord_equal(ylim = c(-50, 500)) +
+  scale_colour_discrete(label = model.labels) +
+  guides(colour = guide_legend(title = "model type", override.aes = list(alpha = 1, size = 2)), shape = "none") +
   labs(title = "Predicted v observed values", subtitle = paste(parameters$area_abbr, parameters$rundate)) + 
   theme_minimal(base_size = 10)
 
@@ -435,6 +452,10 @@ ggsave(filename = paste0("../outputs/predvobs__",
 ```
 
 ```{r}
+# export 
+write_rds(results.cv, path = paste0("../outputs/results.cv_", 
+                                   parameters$area_abbr, "_", 
+                                   parameters$rundate, ".rds"))
 # export parameters
 saveRDS(parameters,  paste0("../data/parameters_", 
                                       parameters$area_abbr, ".rds"))
