--- a/spadeadam/R/evaluate.Rmd
+++ b/spadeadam/R/evaluate.Rmd
@@ -4,23 +4,23 @@ params:
   params_fn: 
     input: file
     label: 'Select parameters to import (.rds)'
-    value: "../data/parameters_eng.rds"
+    value: "../data/parameters_spade.rds"
   model_fn: 
     input: file
     label: 'Select model to import (.rds)'
-    value: "../outputs/model.geo_eng_run_20200823-1202.rds"
+    value: "../outputs/model.geo_spade_run_20200827-0917.rds"
   inputs_fn: 
     input: file
     label: 'Select input data to import (.rds)'
-    value: "../outputs/input.data.gs_eng_run_20200823-1202.rds"
+    value: "../outputs/input.data.gs_spade_run_20200827-0917.rds"
   parallel:
     input: checkbox
     label: 'Use multiple cores?'
-    value: TRUE
+    value: FALSE
   subset:
     input: checkbox
     label: 'Subset large dataset? (selects 10,000 observations at random for evaluation)'
-    value: TRUE
+    value: FALSE
 output:
     html_document:
     html_notebook:
@@ -137,6 +137,7 @@ dat_sp$id <- seq(1,nrow(sp_depth)) #add an index
 if(parameters$subset){
 subset.index <- sort(sample(1:nrow(dat_sp), size = 10000, replace = FALSE))
 dat_sp <- dat_sp[subset.index,]
+run_tag <- run_tag[subset.index,]
 }
 # summarise data and covariate space
 prdr.summ <- data.frame(dataset = "predictors", n_points = ncell(predictors), depth_med = as.numeric(NA), 
@@ -219,7 +220,7 @@ sm.cv <- sm.cv.sp@data  %>%
     UPI = pred.tf + 1.96 * sqrt(var),
     obsInInt = obs.tf < UPI & obs.tf > LPI) %>% 
   #select(pred.tf, var, obs.tf, LPI, UPI, obsInInt) %>%
-  bind_cols(run_tag[subset.index,]) %>% 
+  bind_cols(run_tag) %>% 
   mutate(modeltype = "sm")  %>% 
   arrange(id)
 ```
@@ -296,7 +297,7 @@ lm.cv <- lm.cv.sp@data  %>%
     UPI = pred.tf + 1.96 * sqrt(var),
     obsInInt = obs.tf < UPI & obs.tf > LPI) %>% 
   #select(pred.tf, var, obs.tf, LPI, UPI, obsInInt) %>%
-  bind_cols(run_tag[subset.index,]) %>% 
+  bind_cols(run_tag) %>% 
   mutate(modeltype = "lm")  %>% 
   arrange(id)
 ```
@@ -396,7 +397,6 @@ results.cv <- bind_rows(sm.cv, lm.cv, nullmodel, pred.parry) %>%
   full_join(dat_sp@data, by = c("id", "area_abbr", "rundate")) %>% 
   mutate_if(is.character, as.factor) %>% 
   dplyr::select(id, area_abbr, rundate, depth:cbrt_depth, everything())
- summary(results.cv)
 ```
 ### Results summary  
 
@@ -437,9 +437,9 @@ model.labels <- table.metrics$summarytext
 names(model.labels) <- table.metrics$modeltype
 
 ggplot(results.cv, aes(x = depth, y = pred.btf)) +
-  geom_point(aes(colour = modeltype, shape = modeltype), position = position_dodge(width = 2), size = 0.5, alpha = 0.3)+
+  geom_point(aes(colour = modeltype, shape = modeltype), position = position_dodge(width = 2), size = 1.3, alpha = 0.3)+
   geom_abline(slope = 1) +
-  coord_equal(ylim = c(-50, 500)) +
+  coord_equal(ylim = c(-50, 250), xlim = c(-50,250)) +
   scale_colour_discrete(label = model.labels) +
   guides(colour = guide_legend(title = "model type", override.aes = list(alpha = 1, size = 2)), shape = "none") +
   labs(title = "Predicted v observed values", subtitle = paste(parameters$area_abbr, parameters$rundate)) + 
