--- a/spadeadam/R/evaluate.Rmd
+++ b/spadeadam/R/evaluate.Rmd
@@ -8,11 +8,11 @@ params:
   model_fn: 
     input: file
     label: 'Select model to import (.rds)'
-    value: "../outputs/model.geo_spade_run_20200827-0917.rds"
+    value: "../outputs/model.geo_spade_run_20200828-1503.rds"
   inputs_fn: 
     input: file
     label: 'Select input data to import (.rds)'
-    value: "../outputs/input.data.gs_spade_run_20200827-0917.rds"
+    value: "../outputs/input.data.gs_spade_run_20200828-1503.rds"
   parallel:
     input: checkbox
     label: 'Use multiple cores?'
@@ -62,7 +62,8 @@ parameters$tf <- "cbrt" #set which transformation was applied to the data in the
 
 # add new parameters from yaml header
 
-parameters <- c(parameters, params)
+parameters[names(params)] <- params
+
 
 #store graphics params in case things go wrong
 par.ori <- par() #save default plotting parameters
@@ -439,7 +440,7 @@ names(model.labels) <- table.metrics$modeltype
 ggplot(results.cv, aes(x = depth, y = pred.btf)) +
   geom_point(aes(colour = modeltype, shape = modeltype), position = position_dodge(width = 2), size = 1.3, alpha = 0.3)+
   geom_abline(slope = 1) +
-  coord_equal(ylim = c(-50, 250), xlim = c(-50,250)) +
+  coord_equal()+#(ylim = c(-50, 250), xlim = c(-50,250)) +
   scale_colour_discrete(label = model.labels) +
   guides(colour = guide_legend(title = "model type", override.aes = list(alpha = 1, size = 2)), shape = "none") +
   labs(title = "Predicted v observed values", subtitle = paste(parameters$area_abbr, parameters$rundate)) + 
