--- a/england/R/predict.Rmd
+++ b/england/R/predict.Rmd
@@ -130,7 +130,8 @@ y = 4000
 ~0.3Gb per tile
 
 ```{r}
-tracking <- data.frame(xoff = as.numeric(), yoff = as.numeric(), Gb <- as.character())
+tracking <- cbind(i = as.integer(), xoff = as.numeric(), yoff = as.numeric(), Gb = as.character(), seconds = as.numeric()) %>% data.frame()
+
 
 #calculate tiles
 elev_dims <- st_dimensions(elevation_st)
@@ -149,40 +150,46 @@ yremainder  <- ymax-(ysize*ynfull)
 tiles <- data.frame(xoff = rep(seq(1, by = xsize, length.out = xnfull+1), ynfull+1), 
                     yoff = rep(seq(1, by = ysize, length.out = ynfull+1), each = xnfull+1))
 
-for(i in 186:187){    #nrow(tiles)) {
+for(i in 186:196){    #nrow(tiles)) {
+start <- Sys.time()
+
 xoff <- tiles$xoff[i] 
 yoff <- tiles$yoff[i]
 
 rasterio <- list(nXOff = xoff, nYOff = yoff, nXSize = xsize, nYSize = ysize, bands = c(1))
 elev_tile <- read_stars(parameters$elev_raster_fn, RasterIO = rasterio, proxy = F, quiet = F)
-# elev_tile <- st_transform_proj(x = elev_tile, crs = "+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs")
 
 slope_tile <- read_stars(parameters$slope_raster_fn, RasterIO = rasterio, proxy = F, quiet = F)
-# slope_tile <- st_transform_proj(x = slope_tile, crs = "+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs")
 
 preds_tile <- c(elev_tile, slope_tile) #stack
 names(preds_tile) <- c("elev", "slope")
 rm(elev_tile, slope_tile)
 
-st_crs(preds_tile);  st_crs(sp_depth)
-st_crs(preds_tile) == st_crs(sp_depth)
-
-sp_depth_tf <- sp::spTransform(sp_depth, CRSobj = CRS("+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs"))
+sp_depth <- sp::spTransform(sp_depth, CRSobj = CRS("+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs"))
 
 
 Gb <- object.size(preds_tile)/1000000000
-tracking <- rbind(tracking, c(xoff = xoff, yoff = yoff, Gb = Gb))
-print(c(xoff, yoff, Gb))
+print(as.character(c(i = i, xoff = xoff, yoff = xoff, Gb = Gb)))
 
-gstat::krige(formula = cbrt_depth ~ elev + slope, locations = sp_depth_tf,
-             newdata = preds_tile, model = model.geo)
+krige_out <- gstat::krige(formula = cbrt_depth ~ elev + slope, maxdist = 50,
+                          locations = sp_depth, 
+                          newdata = preds_tile, 
+                          model = model.geo)
 
+write_stars(krige_out["var1.pred"], paste0("../outputs/pred_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+write_stars(krige_out["var1.var"], paste0("../outputs/var_tile", i, "_x", xoff, "_y", yoff, ".tif"))
 
+end <- Sys.time(); time <- difftime(end, start, units = "mins")
+tracking <- rbind(tracking, c(i = i, xoff = xoff, yoff = yoff, Gb = Gb, minutes = time))
+names(tracking) <- c("i", "xoff", "yoff", "Gb", "minutes")
+
+rm(preds_tile, krige_out)
 }
 
 
 ```
-
+Error in predict.gstat(g, newdata = newdata, block = block, nsim = nsim,  : 
+  out of dynamic memory (try local kriging?)
 
 ```{r}
 sf::st_coordinates(x)
